# gnome-p2panda-workshop

./: .gitignore  Cargo.toml  README.md  code.rs  lib.rs  main.blp  p2panda.rs  settings
schema/: schema.toml  secret.txt
