[package]
name = "demo"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
anyhow = "1.0.75"
aquadoggo = "0.7.0"
env_logger = "0.10.1"
glib = "0.18.3"
gql_client = "1.0.7"
libc = "0.2"
log = "0.4.20"
p2panda-rs = "0.8.1"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
toml = "0.8.8"
url = "2.4.0"

[dependencies.gtk]
version = "0.7"
package = "gtk4"
features = ["gnome_45"]

[dependencies.adw]
version = "0.5"
package = "libadwaita"
features = ["v1_4", "gtk_v4_10"]
